@@ -2,6 +2,8 @@
 
 	* cupsconnection.c (Connection_cancelJob): Use job-id instead of
 	job-uri.
+	(Connection_getPrinterAttributes): New uri keyword to allow
+	non-CUPS URIs.
 
 2007-11-22  Tim Waugh  <twaugh@redhat.com>
 
